<resources>
    <string name="app_name">LabManage</string>

    <string name="sign_top_name">北林实验室信息管理系统</string>

    <string name="sign_top_hint">线上预约、实名登记</string>

    <string name="sign_account_number">账号:</string>

    <string name="sign_account_password">密码:</string>

    <string name="sign_account_hint_number">请输入你的学号</string>

    <string name="sign_account_hint_password">请输入你的密码</string>

    <string name="sign_status">身份:</string>

    <string name="sign_button">登陆</string>

    <string name="student_main_title">北林实验室预约信息一览表</string>

    <string name="student_item_index_introduction">测试内容测试内容测试内容测试内容测试内容测试内容
        测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内</string>

    <string name="lab_reserve_rules">实验室预约规则\n
        1.XXXXXXXXXXXXXXXXXXXXXXXXX\n 2.XXXXXXXXXXXXXXXXXXXXXXXX\n
        3.XXXXXXXXXXXXXXXXXXXXXX</string>

    <string name="lab_reserve_rules_agree">我已阅读并同意预约规则</string>

    <string-array name="signIn_status_choose">
        <item>请选择您的身份</item>
        <item>学生</item>
        <item>实验员</item>
    </string-array>

    <string name="technician_lab_rules_agree">我已阅读并同意登记规则</string>

</resources>