<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/theme_color_cyan">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_top_name"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_top_hint"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/editor_border_white"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_account_number"
                android:textSize="20sp"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/et_sign_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_account_hint_number"
                android:inputType="number"
                android:background="null"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/editor_border_white"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_account_password"
                android:textSize="20sp"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/et_sign_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_account_hint_password"
                android:inputType="textPassword"
                android:background="null"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/editor_border_white"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_status"
                android:textSize="20sp"
                android:padding="10dp"/>
            <Spinner
                android:id="@+id/sp_sign_identify"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign_in"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:text="登陆"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:elevation="5dp" />

    </LinearLayout>

</RelativeLayout>